# algrithm-c

./: .clang-format  .gitignore  CMakeLists.txt
Kata/: 2sum.cc  a.cpp  buildTowers.cc  busStop.cpp  d.c  digital_root.cc  duplicate Encoder.c  duplicateEncoder.cpp  endwith.cc  findNextSquare.cc  getCount.cc  highestWord.cc  ipv4.cc  longestConsequense.cc  splitStr.cpp  sumTwoSmallestNumbers.cc
array/: a.cpp  class.cpp  helicopter.cpp  roatate.cpp  rotate.cpp  tinyteries.cc
backtracking/: combine.cpp  combine_sum.cpp  combine_sum_3.cpp  include.h  letter-combinations-of-a-phone-number.cpp
basic/: Truncate.c  char.c  concatStr.c  random.c  strtol.c
basic-cpp/: enum.cpp  initValue.cc  map.cpp
graph/: c1_2_create2.c  c1_create.c  c1_create.cpp  c2_tree_traversal.c  c2_tree_traversal.cpp  c3_complete_BST.cpp
hashtable/: arrayType.cc
heap/: N.txt  c0_Heap.c  h.json  开放寻址.md
leetcode/: EvenDigits.cc  MaxConsecutiveOnes.cc  duplicateZeros.cc  mergeSortedArray.cc  sqrtOfSortedArr.cc
list/: code01_seqList.c  code02_dynamicSeqList.c  code03_1_NoHeadList.c  code03_2_NoHeadList.c  code03_LinkedList.c  code03_LinkedList.h  code04_DoubleList.c  code04_DoubleList.h  le_addTwoNumbers.cc  le_commonListFunction.cc  le_commonListFunction.h  le_deleteNode.cc  le_designDoubleLinkedList.cc  le_designLinkedList.cc  le_flattenDoubleList.cc  le_interactionOf2LinkedList.cc  le_isPalindrome.cc  le_linkedListCircle.cc  le_mergeTwoSortedList.cc  le_mystackByqueue.cc  le_removeNthFromEnd.cc  le_reverseLinkedList.cc  makefile  oddEvenList.cc
queue/: c0_Queue.c  c0_Queue.h  c3_test.c  (+4 more)
(+83 files in other folders)
